smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/shape-name-syntax3.smithy
// Syntax error at line 4, column 12: Expected a valid identifier character, but found ' '
namespace com.foo

structure _ {}
